--- a/C++/SmartPointer/SmartPointer.vcxproj.filters
+++ b/C++/SmartPointer/SmartPointer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="SharedPtr.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="WeakPtr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test.cpp">
