--- a/C++/Move/Move.vcxproj
+++ b/C++/Move/Move.vcxproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestForward.h" />
+    <ClInclude Include="TestMove.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
