Add Bind.h for test std::bind.

--- a/C++/Function/Function.vcxproj
+++ b/C++/Function/Function.vcxproj
@@ -65,6 +65,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Bind.h" />
     <ClInclude Include="Lambda.h" />
   </ItemGroup>
   <ItemGroup>
