--- a/C++/Function/Function.vcxproj.filters
+++ b/C++/Function/Function.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Lambda.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Bind.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestFunction.cpp">
