Add Callback.h to build a simple callback system by std::bind and std::function.

--- a/C++/Function/Function.vcxproj.filters
+++ b/C++/Function/Function.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Function.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Callback.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestFunction.cpp">
