--- a/C++/Move/Move.vcxproj
+++ b/C++/Move/Move.vcxproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <ClInclude Include="TestForward.h" />
     <ClInclude Include="TestMove.h" />
+    <ClInclude Include="TestReference.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
