Add Allocator.h and use Allocator for Vector instead of std::allocator.

--- a/C++/Memory/Memory.vcxproj
+++ b/C++/Memory/Memory.vcxproj
@@ -68,6 +68,7 @@
     <ClCompile Include="TestMemory.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Allocator.h" />
     <ClInclude Include="TestAlignment.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
