--- a/C++/Memory/Memory.vcxproj.filters
+++ b/C++/Memory/Memory.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="TestAlignment.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Allocator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
