--- a/C++/Container/Container.vcxproj.filters
+++ b/C++/Container/Container.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="Vector.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestContainer.cpp">
